[tool.black]
line-length = 99
target-version = ["py38", "py39", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|venv|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
line_length = 79
skip_glob = ".venv,venv"

[tool.poetry]
name = "pydantic-secret-decimal"
version = "0.1.2"
description = "Secret field for Decimal types in Pydantic"
repository = "https://github.com/expobrain/pydantic-secret-decimal"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{ include = "pydantic_secret_decimal" }]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pydantic = "^1.8"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7"
black = "^23.9"
isort = "^5.12.0"
mypy = "^1.5"
pdbpp = "^0.10.3"
pytest = ">=7.4.2,<9.0.0"
pytest-cov = "^4.1.0"
flake8 = "^5.0.4"
commitizen = "^3.8.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
version_files = [
    "pyproject.toml:^version"
]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
